<resources>
    <string name="app_name">Room Demo App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_button">fab button</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="add_button">Add</string>
    <string name="update_button">Update</string>
    <string name="delete">Delete</string>
</resources>