<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.update.UpdateFragment">


    <EditText
        android:id="@+id/update_first_name"
        android:layout_width="330dp"
        android:layout_height="53dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/update_last_name"
        android:layout_width="332dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/update_first_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/update_first_name"
        app:layout_constraintTop_toBottomOf="@+id/update_first_name" />

    <EditText
        android:id="@+id/update_age"
        android:layout_width="336dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/update_last_name"
        app:layout_constraintStart_toStartOf="@+id/update_last_name"
        app:layout_constraintTop_toBottomOf="@+id/update_last_name" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="331dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:text="@string/update_button"
        app:layout_constraintEnd_toEndOf="@+id/update_age"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/update_age"
        app:layout_constraintTop_toBottomOf="@+id/update_age" />


</androidx.constraintlayout.widget.ConstraintLayout>